defmt/tests/ui/derive-invalid-crate-overwrite.stderr
error: expected identifier
 --> tests/ui/derive-invalid-crate-overwrite.rs:6:17
  |
6 | #[defmt(crate = "not a path")]
  |                 ^^^^^^^^^^^^

error: expected `=`
  --> tests/ui/derive-invalid-crate-overwrite.rs:10:14
   |
10 | #[defmt(crate(defmt))]
   |              ^

error[E0432]: unresolved import `unresolved`
 --> tests/ui/derive-invalid-crate-overwrite.rs:1:10
  |
1 | #[derive(defmt::Format)]
  |          ^^^^^^^^^^^^^ no external crate `unresolved`
  |
  = note: this error originates in the derive macro `defmt::Format` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: failed to resolve: use of undeclared crate or module `unresolved`
 --> tests/ui/derive-invalid-crate-overwrite.rs:2:17
  |
2 | #[defmt(crate = unresolved)]
  |                 ^^^^^^^^^^ use of undeclared crate or module `unresolved`
